--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 
 <!-- Category Sections -->
 <section class="category">
-  <img src="your_yggdrasil_image.jpg" alt="Yggdrasil illustration">
+  <img src="GPT_Image_1_A_Renaissancestyle_sketch_of_yggdrasilworld_tree_w_0(1).png" alt="Yggdrasil illustration">
   <h2>Conceptual Study</h2>
   <p>Explorations into philosophy, systems, and structure — the roots and branches of understanding.</p>
   <a href="conceptual.html" class="btn">Enter</a>
