--- a/index.html
+++ b/index.html
@@ -117,9 +117,9 @@
   <p><strong>Vision:</strong> To explore, synthesize, and create frameworks of understanding — projects, reflections, and conceptual studies — that turn self-discovery into shared clarity.</p>
   <p>My meaning lies in the act of discovery itself — in refining ideas, testing them through work, and sharing what is learned.</p>
 </header>
-
+  
 <!-- Category Sections -->
-<section class="category">
+<section class="category conceptual">
   <h2>Conceptual Study</h2>
   <p>Explorations into philosophy, systems, and structure — the roots and branches of understanding.</p>
   <a href="conceptual.html" class="btn">Enter</a>
