--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
 
     .category.conceptual::before {
       background: rgba(245, 240, 220, 0.3); /* parchment-like overlay */
+      backdrop-filter: blur(1px);
     }
   
     .category.conceptual h2,
