--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 <header>
   <h1>The Living Study</h1>
   <p><strong>Vision:</strong> To explore, synthesize, and create frameworks of understanding — projects, reflections, and conceptual studies — that turn self-discovery into shared clarity.</p>
-  <p>My meaning lies in the act of discovery itself — in refining ideas, testing them through work, and sharing what is learned.</p>
+  <p>Early stages - still in development.</p>
 </header>
   
 <!-- Category Sections -->
@@ -131,7 +131,7 @@
 <section class="category">
   <img src="your_reflection_image.jpg" alt="Reflection illustration">
   <h2>Reflection & Unity</h2>
-  <p>Personal insights, essays, and patterns that tie the conceptual to the lived.</p>
+  <p>Insights, essays, and patterns that connect to personal experience.</p>
   <a href="reflection.html" class="btn">Enter</a>
 </section>
 
