--- a/index.html
+++ b/index.html
@@ -80,13 +80,14 @@
     <p>I’ve been writing for most of my life, but what I really love is helping businesses talk to their customers in a way that feels natural — not pushy or fake. If you’ve ever stared at a blank screen wondering how to write the next email to your list, that’s where I come in.</p>
     <p>I’ll help you find the right voice, plan your sequences, and turn your readers into repeat customers. Whether you’re sending welcome emails, product launches, or just keeping your audience engaged, I can make sure your message hits home — and sounds like you.</p>
     <p>If you’re tired of guessing what to write or hoping your next email doesn’t get ignored, let’s fix that. I’ll handle the words, so you can focus on running your business.</p>
-
-    <form action="mailto:jaykatsuragi1@gmail.com" method="post" enctype="text/plain">
+    
+   <form action="https://formspree.io/f/xvgdgweq" method="POST">
   <input type="text" name="name" placeholder="Your name" required><br><br>
   <input type="email" name="email" placeholder="Your email" required><br><br>
   <textarea name="message" rows="5" placeholder="Tell me a bit about your project..." required></textarea><br><br>
   <button type="submit">Send Message</button>
-    </form>
+  </form>
+
 
     <footer>
       <p>© 2025 Jay Katsuragi – Copywriter<br>
