--- a/index.html
+++ b/index.html
@@ -45,6 +45,16 @@
       max-width: 300px;
       font-size: 1rem;
     }
+    input[type="text"] {
+      padding: 10px;
+      border: 1px solid #ccc;
+      border-radius: 4px;
+      width: 80%;
+      max-width: 300px;
+      font-size: 1rem;
+      display: block;
+      margin: 0 auto; /* centers it */
+      }
     textarea {
       width: 80%;
       max-width: 300px;
@@ -71,6 +81,10 @@
       font-size: 0.85rem;
       color: #333;
       margin-top: 2rem;
+    }
+    input:focus, textarea:focus {
+      outline: 2px solid #7703fc;
+      border-color: #7703fc;
     }
   </style>
 </head>
