--- a/index.html
+++ b/index.html
@@ -46,12 +46,12 @@
       font-size: 1rem;
     }
     input[type="text"] {
-      padding: 8px;
+      padding: 10px;
       border: 1px solid #ccc;
       border-radius: 4px;
-      width: 75%;
+      width: 80%;
       max-width: 280px;
-      font-size: 0.4rem;
+      font-size: 1rem;
       display: block;
       margin: 0 auto; /* centers it */
       }
@@ -96,7 +96,7 @@
     <p>If you’re tired of guessing what to write or hoping your next email doesn’t get ignored, let’s fix that. I’ll handle the words, so you can focus on running your business.</p>
     
    <form action="https://formspree.io/f/xvgdgweq" method="POST">
-  <input type="text" name="name" placeholder="Your name" required><br><br>
+  <input type="text" name="name" placeholder="Your name" required>
   <input type="email" name="email" placeholder="Your email" required><br><br>
   <textarea name="message" rows="5" placeholder="Tell me a bit about your project..." required></textarea><br><br>
   <button type="submit">Send Message</button>
