--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
       max-width: 280px;
       font-size: 1rem;
       display: block;
-      margin: 0 auto; /* centers it */
+      margin: 0.4rem auto; /* centers it */
       }
     textarea {
       width: 80%;
