--- a/index.html
+++ b/index.html
@@ -1,112 +1,295 @@
-<!doctype html>
+<!DOCTYPE html>
+
 <html lang="en">
+
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width,initial-scale=1">
-  <title>Jay Katsuragi – Copywriter</title>
-  <meta name="description" content="Freelance copywriter crafting clear, persuasive copy that converts.">
+
+  <meta charset="UTF-8">
+
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+  <title>Jay Katsuragi — The Living Study</title>
+
+  <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@600&family=EB+Garamond&display=swap" rel="stylesheet">
+
   <style>
+
     body {
+
       margin: 0;
-      font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;
-      background-color: #d6e5c3; /* muted green */
-      color: #111;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      min-height: 100vh;
+
+      font-family: 'EB Garamond', serif;
+
+      background-color: #f5f0dc;
+
+      color: #3b2f2f;
+
+      line-height: 1.6;
+
+      background-image: url('https://www.transparenttextures.com/patterns/paper-fibers.png');
+
     }
-    main {
-      max-width: 650px;
-      padding: 40px 20px;
+
+
+
+    header {
+
       text-align: center;
-      line-height: 1.7;
+
+      padding: 80px 20px;
+
+      max-width: 800px;
+
+      margin: 0 auto;
+
     }
+
+
+
+    h1, h2 {
+
+      font-family: 'Cormorant Garamond', serif;
+
+      text-transform: uppercase;
+
+      letter-spacing: 1px;
+
+    }
+
+
+
     h1 {
-      font-size: 2rem;
-      margin-bottom: 1rem;
+
+      font-size: 2.5rem;
+
+      margin-bottom: 20px;
+
     }
+
+
+
     p {
-      font-size: 1.05rem;
-      margin-bottom: 1.2rem;
+
+      font-size: 1.1rem;
+
     }
-    a {
-      color: #111;
-      text-decoration: underline;
+
+
+
+    section {
+
+      text-align: center;
+
+      padding: 60px 20px;
+
+      max-width: 1000px;
+
+      margin: 0 auto;
+
+      border-top: 1px solid rgba(60, 40, 20, 0.2);
+
     }
-    form {
-      margin-top: 2rem;
+
+
+
+    .category img {
+
+      max-width: 100%;
+
+      border-radius: 10px;
+
+      box-shadow: 0 4px 14px rgba(0,0,0,0.1);
+
+      margin-bottom: 20px;
+
     }
-    input[type="email"] {
-      padding: 10px;
-      border: 1px solid #ccc;
-      border-radius: 4px;
-      width: 80%;
-      max-width: 300px;
-      font-size: 1rem;
+
+/* Conceptual Study Background */
+
+    .category.conceptual {
+
+      position: relative;
+
+      background-image: url('yggdrasil.png');
+
+      background-size: cover;
+
+      background-position: center;
+
+      background-repeat: no-repeat;
+
+      color: #2e1d1d;
+
+      overflow: hidden;
+
     }
-    input[type="text"] {
-      padding: 10px;
-      border: 1px solid #ccc;
-      border-radius: 4px;
-      width: 80%;
-      max-width: 250px;
-      font-size: 1rem;
-      display: block;
-      margin: 1rem auto; /* centers it */
-      }
-    textarea {
-      width: 80%;
-      max-width: 300px;
-      padding: 10px;
-      border: 1px solid #ccc;
-      border-radius: 4px;
-      font-size: 1rem;
-      resize: vertical;
+
+
+
+    .category.conceptual::before {
+
+      background: rgba(245, 240, 220, 0.5); /* parchment-like overlay */
+
     }
-    button {
-      margin-top: 10px;
-      background: #111;
-      color: white;
-      border: none;
-      padding: 10px 16px;
-      border-radius: 4px;
-      cursor: pointer;
-      font-size: 1rem;
+
+
+
+    .category.conceptual h2,
+
+    .category.conceptual p,
+
+    .category.conceptual a {
+
+    position: relative;
+
+    z-index: 1;
+
     }
-    button:hover {
-      background: #333;
+
+
+
+    .category h2 {
+
+      font-size: 1.8rem;
+
+      margin-bottom: 10px;
+
     }
+
+
+
+    .category p {
+
+      font-style: italic;
+
+      margin-bottom: 20px;
+
+    }
+
+
+
+    .btn {
+
+      display: inline-block;
+
+      background: #3b2f2f;
+
+      color: #f5f0dc;
+
+      padding: 10px 20px;
+
+      text-decoration: none;
+
+      border-radius: 6px;
+
+      transition: 0.3s;
+
+    }
+
+
+
+    .btn:hover {
+
+      background: #6b4b3b;
+
+    }
+
+
+
     footer {
-      font-size: 0.85rem;
-      color: #333;
-      margin-top: 2rem;
+
+      text-align: center;
+
+      font-size: 0.9rem;
+
+      color: #6b4b3b;
+
+      padding: 20px;
+
+      border-top: 1px solid rgba(60, 40, 20, 0.2);
+
     }
-    input:focus, textarea:focus {
-      outline: 2px solid #7703fc;
-      border-color: #7703fc;
-    }
+
   </style>
+
 </head>
+
 <body>
-  <main>
-    <h1>Hey, I’m Jay — I write words that help your emails actually get read.</h1>
-    <p>I’ve been writing for most of my life, but what I really love is helping businesses talk to their customers in a way that feels natural — not pushy or fake. If you’ve ever stared at a blank screen wondering how to write the next email to your list, that’s where I come in.</p>
-    <p>I’ll help you find the right voice, plan your sequences, and turn your readers into repeat customers. Whether you’re sending welcome emails, product launches, or just keeping your audience engaged, I can make sure your message hits home — and sounds like you.</p>
-    <p>If you’re tired of guessing what to write or hoping your next email doesn’t get ignored, let’s fix that. I’ll handle the words, so you can focus on running your business.</p>
-    
-   <form action="https://formspree.io/f/xvgdgweq" method="POST">
-  <input type="text" name="name" placeholder="Your name" required>
-  <input type="email" name="email" placeholder="Your email" required><br><br>
-  <textarea name="message" rows="5" placeholder="Tell me a bit about your project..." required></textarea><br><br>
-  <button type="submit">Send Message</button>
-  </form>
 
 
-    <footer>
-      <p>© 2025 Jay Katsuragi – Copywriter<br>
-      Payments via Stripe | Based in the US</p>
-    </footer>
-  </main>
+
+<header>
+
+  <h1>The Living Study</h1>
+
+  <p><strong>Vision:</strong> To explore, synthesize, and create frameworks of understanding — projects, reflections, and conceptual studies — that turn self-discovery into shared clarity.</p>
+
+
+  <p>My meaning lies in the act of discovery itself — in refining ideas, testing them through work, and sharing what is learned.</p>
+
+
+  <p>Early stages - still in development.</p>
+
+</header>
+
+
+
+<!-- Category Sections -->
+
+<section class="category conceptual">
+
+  <h2>Conceptual Study</h2>
+
+  <p>Explorations into philosophy, systems, and structure — the roots and branches of understanding.</p>
+
+  <a href="conceptual.html" class="btn">Enter</a>
+
+</section>
+
+
+
+<section class="category">
+
+  <img src="your_project_image.jpg" alt="Technology and code illustration">
+
+  <h2>Project Notes</h2>
+
+  <p>Practical builds and technical notes — testing abstract ideas in reality.</p>
+
+  <a href="projects.html" class="btn">Enter</a>
+
+</section>
+
+
+
+<section class="category">
+
+  <img src="your_reflection_image.jpg" alt="Reflection illustration">
+
+  <h2>Reflection & Unity</h2>
+
+
+  <p>Personal insights, essays, and patterns that tie the conceptual to the lived.</p>
+
+
+  <p>Insights, essays, and patterns that connect to personal experience.</p>
+
+  <a href="reflection.html" class="btn">Enter</a>
+
+</section>
+
+
+
+<footer>
+
+  © 2025 Jay Katsuragi — A Study in Synthesis
+
+</footer>
+
+
+
 </body>
+
 </html>
+
+~
