Update index.html with links

--- a/index.html
+++ b/index.html
@@ -1,295 +1,81 @@
 <!DOCTYPE html>
-
 <html lang="en">
-
 <head>
-
   <meta charset="UTF-8">
-
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
   <title>Jay Katsuragi — The Living Study</title>
 
   <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@600&family=EB+Garamond&display=swap" rel="stylesheet">
 
   <style>
-
     body {
-
       margin: 0;
-
       font-family: 'EB Garamond', serif;
-
       background-color: #f5f0dc;
-
       color: #3b2f2f;
-
       line-height: 1.6;
-
-      background-image: url('https://www.transparenttextures.com/patterns/paper-fibers.png');
-
     }
 
-
-
-    header {
-
+    header, section, footer {
       text-align: center;
-
-      padding: 80px 20px;
-
-      max-width: 800px;
-
+      padding: 60px 20px;
+      max-width: 900px;
       margin: 0 auto;
-
     }
-
-
 
     h1, h2 {
-
       font-family: 'Cormorant Garamond', serif;
-
       text-transform: uppercase;
-
       letter-spacing: 1px;
-
     }
-
-
-
-    h1 {
-
-      font-size: 2.5rem;
-
-      margin-bottom: 20px;
-
-    }
-
-
-
-    p {
-
-      font-size: 1.1rem;
-
-    }
-
-
 
     section {
-
-      text-align: center;
-
-      padding: 60px 20px;
-
-      max-width: 1000px;
-
-      margin: 0 auto;
-
-      border-top: 1px solid rgba(60, 40, 20, 0.2);
-
+      border-top: 1px solid rgba(60,40,20,0.2);
     }
-
-
-
-    .category img {
-
-      max-width: 100%;
-
-      border-radius: 10px;
-
-      box-shadow: 0 4px 14px rgba(0,0,0,0.1);
-
-      margin-bottom: 20px;
-
-    }
-
-/* Conceptual Study Background */
-
-    .category.conceptual {
-
-      position: relative;
-
-      background-image: url('yggdrasil.png');
-
-      background-size: cover;
-
-      background-position: center;
-
-      background-repeat: no-repeat;
-
-      color: #2e1d1d;
-
-      overflow: hidden;
-
-    }
-
-
-
-    .category.conceptual::before {
-
-      background: rgba(245, 240, 220, 0.5); /* parchment-like overlay */
-
-    }
-
-
-
-    .category.conceptual h2,
-
-    .category.conceptual p,
-
-    .category.conceptual a {
-
-    position: relative;
-
-    z-index: 1;
-
-    }
-
-
-
-    .category h2 {
-
-      font-size: 1.8rem;
-
-      margin-bottom: 10px;
-
-    }
-
-
-
-    .category p {
-
-      font-style: italic;
-
-      margin-bottom: 20px;
-
-    }
-
-
 
     .btn {
-
       display: inline-block;
-
       background: #3b2f2f;
-
       color: #f5f0dc;
-
       padding: 10px 20px;
-
       text-decoration: none;
-
       border-radius: 6px;
-
-      transition: 0.3s;
-
     }
-
-
 
     .btn:hover {
-
       background: #6b4b3b;
-
     }
-
-
-
-    footer {
-
-      text-align: center;
-
-      font-size: 0.9rem;
-
-      color: #6b4b3b;
-
-      padding: 20px;
-
-      border-top: 1px solid rgba(60, 40, 20, 0.2);
-
-    }
-
   </style>
-
 </head>
 
 <body>
 
-
-
 <header>
-
   <h1>The Living Study</h1>
-
-  <p><strong>Vision:</strong> To explore, synthesize, and create frameworks of understanding — projects, reflections, and conceptual studies — that turn self-discovery into shared clarity.</p>
-
-
-  <p>My meaning lies in the act of discovery itself — in refining ideas, testing them through work, and sharing what is learned.</p>
-
-
-  <p>Early stages - still in development.</p>
-
+  <p>Projects, reflections, and conceptual studies.</p>
 </header>
 
-
-
-<!-- Category Sections -->
-
-<section class="category conceptual">
-
+<section>
   <h2>Conceptual Study</h2>
-
-  <p>Explorations into philosophy, systems, and structure — the roots and branches of understanding.</p>
-
-  <a href="conceptual.html" class="btn">Enter</a>
-
+  <p>Philosophy, systems, structure.</p>
+  <a href="conceptual/" class="btn">Enter</a>
 </section>
 
-
-
-<section class="category">
-
-  <img src="your_project_image.jpg" alt="Technology and code illustration">
-
+<section>
   <h2>Project Notes</h2>
-
-  <p>Practical builds and technical notes — testing abstract ideas in reality.</p>
-
-  <a href="projects.html" class="btn">Enter</a>
-
+  <p>Practical builds and technical notes.</p>
+  <a href="projects/" class="btn">Enter</a>
 </section>
 
-
-
-<section class="category">
-
-  <img src="your_reflection_image.jpg" alt="Reflection illustration">
-
+<section>
   <h2>Reflection & Unity</h2>
-
-
-  <p>Personal insights, essays, and patterns that tie the conceptual to the lived.</p>
-
-
-  <p>Insights, essays, and patterns that connect to personal experience.</p>
-
-  <a href="reflection.html" class="btn">Enter</a>
-
+  <p>Personal essays and synthesis.</p>
+  <a href="reflection/" class="btn">Enter</a>
 </section>
-
-
 
 <footer>
-
-  © 2025 Jay Katsuragi — A Study in Synthesis
-
+  © 2025 Jay Katsuragi
 </footer>
 
-
-
 </body>
-
 </html>
-
-~
