--- a/conceptual/essay1.html
+++ b/conceptual/essay1.html
@@ -1,1 +1,29 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>Essay Title</title>
+</head>
+<body>
+
+<article>
+  <h1>Essay Title</h1>
+  <p><em>Jay Katsuragi</em></p>
+
+  <p>
+    Paste your essay here.
+  </p>
+
+  <p>
+    You can add as many paragraphs as you want.
+  </p>
+</article>
+
+<nav>
+  <a href="index.html">← Back to Category</a><br>
+  <a href="../index.html">Home</a>
+</nav>
+
+</body>
+</html>
 
